syntax = "proto3";

package logistics;

option go_package = "github.com/emergency-material-system/backend/internal/common/genproto/logistics";

// 物流追踪服务
service LogisticsService {
  // 获取物流轨迹
  rpc GetTracking(GetTrackingRequest) returns (GetTrackingResponse);
  
  // 更新物流位置
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse);
  
  // 获取物流历史
  rpc GetTrackingHistory(GetTrackingHistoryRequest) returns (GetTrackingHistoryResponse);
  
  // 创建物流记录
  rpc CreateTracking(CreateTrackingRequest) returns (CreateTrackingResponse);
}

message GetTrackingRequest {
  int64 order_id = 1;
}

message GetTrackingResponse {
  Tracking tracking = 1;
}

message UpdateLocationRequest {
  int64 tracking_id = 1;
  double latitude = 2;
  double longitude = 3;
  string address = 4;
}

message UpdateLocationResponse {
  Tracking tracking = 1;
}

message GetTrackingHistoryRequest {
  int64 order_id = 1;
}

message GetTrackingHistoryResponse {
  repeated TrackingPoint points = 1;
}

message CreateTrackingRequest {
  int64 order_id = 1;
  string vehicle_id = 2;
  string driver_info = 3;
}

message CreateTrackingResponse {
  Tracking tracking = 1;
}

message Tracking {
  int64 id = 1;
  int64 order_id = 2;
  string vehicle_id = 3;
  string driver_info = 4;
  string status = 5;
  TrackingPoint current_location = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message TrackingPoint {
  int64 id = 1;
  int64 tracking_id = 2;
  double latitude = 3;
  double longitude = 4;
  string address = 5;
  int64 timestamp = 6;
}

